# catan-engine

./: .gitignore  Cargo.toml  Dockerfile  README.md  launch.py  requirements.txt
analyzer/: analyze.py  best_response_probe.py  coalition_report_inject.py  coalition_sweep.py  inspect_format.py  policy_band.py  policy_sensitivity.py  psro.py  requirements.txt
api/: main.py  start_server.py
api/estimators/: __init__.py  base.py  monte_carlo.py
api/tests/: conftest.py  test_simulate_records.py
catan_research/: __init__.py  _verify.py  core.py  run.py  strategy.py
examples/: benchmark.rs  corner_hoarder.py
src/: actions.rs  board.rs  engine.rs  lib.rs  simulation.rs  state.rs  stats.rs
src/policy/: mcts.rs  mod.rs  py_strategy.rs  rule_based.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css  types.ts
ui/src/components/: CardsPanel.tsx  Controls.tsx  HexBoard.tsx  PlayerBar.tsx  RecordsPanel.tsx  StrategyPanel.tsx  WinPanel.tsx
ui/src/lib/: boardData.ts  csv.test.ts  csv.ts  hexGeometry.ts  timing.ts
