[package]
name = "catan-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "catan_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
